# curso_arquitectura_informacion_MR

./: .gitignore  README.md
Final/: README.md
Final/deployment/exp1/: ecs.tf  iam.tf  user_data.sh
Final/src/ms_agregacion_scoring/: Dockerfile
Final/src/ms_procesamiento_ordenes/: pyproject.toml
Final/src/ms_procesamiento_ordenes/src/: app.py
Final/src/ms_procesamiento_ordenes/src/test/performance/: result_exp3_scalability_4ecsTask_0.5vcpu2GBMemory.jtl
Reto1/deployment/exp1/: alb.tf  vpc.tf
Reto1/deployment/exp2/: data_sources.tf  fifo.tf  sg.tf  user_data.sh  variables.tf
Reto1/ms_notificaciones/: README.md
Reto1/ms_notificaciones/notebooks/: analisis_exp.ipynb
Reto2/: README.md
Reto2/deployment/exp1_disponibilidad/: crear_tabla_ordenes_servicio.pgsql  database.tf  ec2.tf  iam.tf  outputs.tf  sg.tf  user_data.sh  variables.tf  vpc.tf
Reto2/deployment/exp2_seguridad/: comparar_rutas.ipynb  rutas_medellin_discrepancias.html
Reto2/scripts/: jmeter_test_exp1.sh
Reto2/src/: prueba_monitoreo.jmx
curso-arquitectura/: pyvenv.cfg
curso-arquitectura/Scripts/: activate  activate.bat
deployment/: alb.tf  data_sources.tf  ec2.tf  ecs.tf  iam.tf  sg.tf  user_data.sh  variables.tf
deployment/exp2/: ec2.tf  iam.tf
ms_matching_engine/: README.md
ms_notificaciones/scripts/: push_and_proccess_notifications.py
ms_procesamiento_ordenes/: README.md  app.py  pyproject.toml
ms_procesamiento_ordenes/notebooks/: analisis_exp.ipynb
ms_procesamiento_ordenes/scripts/: build_and_push_image.sh
ms_procesamiento_ordenes/src/: app.py
(+176 files in other folders)
