[project]
name = "ms-procesamiento-ordenes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "kafka>=1.3.5",
    "kafka-python>=2.0.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.0",
]
